<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transmission"
            android:icon="@drawable/ic_local_offer_black_24px"
            android:title="@string/transmission" />
        <item
            android:id="@+id/nav_tire"
            android:icon="@drawable/ic_local_offer_black_24px"
            android:title="@string/nav_tire" />
        <item
            android:id="@+id/nav_gears"
            android:icon="@drawable/ic_local_offer_black_24px"
            android:title="@string/nav_gears" />
        <item
            android:id="@+id/nav_transfer_case"
            android:icon="@drawable/ic_local_offer_black_24px"
            android:title="@string/nav_transfer_case" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>