<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textGear"
        android:layout_margin="10dp"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        style="@style/GearRatio"
        android:text="3.08"
        android:layout_weight="0"
        />

    <LinearLayout
        android:id="@+id/viewItemFirstGear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelFirstSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Gear"
            android:text="@string/first_gear_text"
            />

        <TextView
            android:id="@+id/textFirstSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Speed"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewItemSecondGear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelSecondSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Gear"
            android:text="@string/second_gear_text"
            />

        <TextView
            android:id="@+id/textSecondSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Speed"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewItemThirdGear"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelThirdSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Gear"
            android:text="@string/third_gear_text"
            />

        <TextView
            android:id="@+id/textThirdSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Speed"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewItemFourthGear"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelFourthSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Gear"
            android:text="@string/fourth_gear_text"
            />

        <TextView
            android:id="@+id/textFourthSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Speed"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewItemFifthGear"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/labelFifthSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Gear"
            android:text="@string/fifth_gear_text"
            />

        <TextView
            android:id="@+id/textFifthSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            style="@style/Speed"
            />

    </LinearLayout>


</LinearLayout>